# Task

./: .gitignore  pyproject.toml
task_1/: solution.py  unit.py
task_2/: beasts.csv  exception_handler.py  settings.py  solution.py  unit.py
task_3/: solution.py  unit.py
