[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["klukashka <klukin0202@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
requests = "^2.32.3"
bs4 = "^0.0.2"
pandas = "^2.2.3"
httpx = "^0.27.2"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
